--- a/styles2.css
+++ b/styles2.css
@@ -553,6 +553,32 @@ input:checked + .slider:before {
         text-align: center;
     }
 
+    .left-column{
+        margin-right: 0;
+        margin-bottom: 0;
+    }
+
+    .left-column-center{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .left-column-pro-img{
+        width: 250px;
+        height: 250px;
+        border-radius: 100%;
+    }
+
+    .right-column-name{
+        padding: 0 0 1rem 0;
+    }
+
+    .profile-img-container{
+        padding-top: 20px;
+    }
+
+
     .header {
         padding: 1rem;
     }
