--- a/styles2.css
+++ b/styles2.css
@@ -570,6 +570,10 @@ input:checked + .slider:before {
         border-radius: 100%;
     }
 
+    .left-column-pro-info{
+        margin-bottom: 20px;
+    }
+
     .right-column-name{
         padding: 0 0 1rem 0;
     }
