--- a/styles.css
+++ b/styles.css
@@ -645,3 +645,13 @@ input:checked+.slider:before {
         transform: none;
     }
 }
+
+/* 只針對Safari 的樣式 */
+@media not all and (min-resolution: 0.001dpcm) { 
+    @supports (-webkit-appearance:none) {
+        a {
+            color: black; /* 特定於 Safari 的樣式 */
+            text-decoration: none;
+        }
+    }
+}
