--- a/styles2.css
+++ b/styles2.css
@@ -139,7 +139,6 @@ main {
 .button-group {
     display: flex;
     gap: 1rem;
-    flex-wrap: wrap;
     justify-content: flex-end;
     margin-right: 2rem;
 }
@@ -527,6 +526,7 @@ input:checked + .slider:before {
 
     .button-group {
         justify-content: center;
+        margin-right: 0;
     }
 
     .portfolio {
@@ -580,6 +580,10 @@ input:checked + .slider:before {
 
     .profile-img-container{
         padding-top: 20px;
+    }
+
+    .about-me, .nav-btn {
+        padding: 0.3rem 0.5rem;
     }
 
 
