--- a/styles.css
+++ b/styles.css
@@ -397,9 +397,9 @@ main {
 }
 
 .portfolio-item img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+    /* width: 100%; */
+    /* height: 200px; */
+    object-fit: contain;
 }
 
 .portfolio-item h3 {
