--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 
 body {
     background-color: var(--background-color);
-    background: url('img/white.png') no-repeat center center fixed;
+    background: url('img/white-bg.png') no-repeat center center fixed;
     line-height: 1.6;
     color: var(--text-color);
     padding: 20px;
