--- a/styles.css
+++ b/styles.css
@@ -246,11 +246,11 @@ main {
 }
 
 .section-title-left-license::after {
-    background-color: #b3d1e8;
+    background-color: #b6d4e9;
 }
 
 .section-title-left-skill::after {
-    background-color: #a7c6e7;
+    background-color: #abcbe8;
 }
 
 /* =========================
